feat: iniciado documentacao de cadastro de empresa
